--- a/debian/rules
+++ b/debian/rules
@@ -27,6 +27,14 @@ DEB_UPSTREAM_URL = http://downloads.sourceforge.net/netatalk
 DEB_UPSTREAM_TARBALL_BASENAME_MANGLE = s/~(alpha|beta|rc)/-\1/
 DEB_UPSTREAM_TARBALL_MD5 = c00dd0b35279d6daac6e3306576cecaf
 
+DEB_UPSTREAM_CRUFT_MOVE = \
+  libevent/Makefile.in \
+  libevent/aclocal.m4 \
+  libevent/configure \
+  libevent/include/Makefile.in \
+  libevent/sample/Makefile.in \
+  libevent/test/Makefile.in \
+
 # Override defaults for old-style update-rc.d
 #  * Start and stop at priority 50 (FIXME: explain reasoning)
 #  * Stop only in runlevel 1 (let system kill it in runlevels 0 and 6)
