Make Jonas the maintainer again
Apparently, somebody has changed maintainership in his private build.

--- a/debian/control.in
+++ b/debian/control.in
@@ -1,8 +1,7 @@
 Source: netatalk
 Section: net
 Priority: extra
-Maintainer: Ubuntu Developers <ubuntu-devel-discuss@lists.ubuntu.com>
-XSBC-Original-Maintainer: Jonas Smedegaard <dr@jones.dk>
+Maintainer: Jonas Smedegaard <dr@jones.dk>
 Build-Depends: @cdbs@
 Build-Conflicts: libavahi-compat-libdnssd-dev
 Vcs-Git: git://git.debian.org/git/collab-maint/netatalk
