--- a/debian/rules
+++ b/debian/rules
@@ -21,7 +21,6 @@ include /usr/share/cdbs/1/rules/upstream-tarball.mk
 include /usr/share/cdbs/1/rules/utils.mk
 include /usr/share/cdbs/1/rules/debhelper.mk
 include /usr/share/cdbs/1/class/autotools.mk
-include /usr/share/hardening-includes/hardening.make
 
 DEB_UPSTREAM_URL = http://downloads.sourceforge.net/netatalk
 DEB_UPSTREAM_TARBALL_BASENAME_MANGLE = s/~(alpha|beta|rc)/-\1/
@@ -42,9 +41,10 @@ DEB_UPDATE_RCD_PARAMS = start 50 2 3 4 5 . stop 50 0 1 6 .
 DEB_DH_INSTALL_ARGS = --list-missing
 
 # Tighten security - more info at http://wiki.debian.org/Hardening
-CFLAGS += $(HARDENING_CFLAGS)
-LDFLAGS += $(HARDENING_LDFLAGS)
+CFLAGS += $(shell dpkg-buildflags --get CFLAGS)
+LDFLAGS += $(shell dpkg-buildflags --get LDFLAGS)
 CPPFLAGS += -D_IPP_PRIVATE_STRUCTURES
+CPPFLAGS += $(shell dpkg-buildflags --get CPPFLAGS)
 
 DEB_CONFIGURE_EXTRA_FLAGS := \
 	--with-shadow 				\
@@ -139,7 +139,7 @@ CDBS_BUILD_DEPENDS += , $(openssl_build_depends)
 endif
 
 # Needed for our packaging routines
-CDBS_BUILD_DEPENDS += , d-shlibs, hardening-includes
+CDBS_BUILD_DEPENDS += , d-shlibs
 
 # Needed (always/often/seldom) at runtime
 #  * netbase needed by network-facing daemons
