--- a/etc/Makefile.in
+++ b/etc/Makefile.in
@@ -409,7 +409,7 @@ target_vendor = @target_vendor@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-SUBDIRS = afpd cnid_dbd netatalk spotlight uams
+SUBDIRS = spotlight afpd cnid_dbd netatalk uams
 all: all-recursive
 
 .SUFFIXES:
