--- a/contrib/shell_utils/Makefile.in
+++ b/contrib/shell_utils/Makefile.in
@@ -390,7 +390,7 @@ PERLSCRIPTS = \
 SUFFIXES = .tmpl .
 CLEANFILES = $(GENERATED_FILES)
 bin_SCRIPTS = $(PERLSCRIPTS) $(GENERATED_FILES) afpstats
-EXTRA_DIST = $(TEMPLATE_FILES) make-casetable.pl make-precompose.h.pl afpstats
+EXTRA_DIST = $(TEMPLATE_FILES) make-casetable.pl make-precompose.h.pl afpstats fce_ev_script.sh
 all: all-am
 
 .SUFFIXES:
