--- a/libatalk/Makefile.in
+++ b/libatalk/Makefile.in
@@ -493,7 +493,7 @@ target_vendor = @target_vendor@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-VERSION_INFO = 15:0:0
+VERSION_INFO = 16:0:0
 
 # History:          VERSION_INFO
 #
@@ -513,8 +513,10 @@ VERSION_INFO = 15:0:0
 #   3.1.0           12:0:0
 #   3.1.1           13:0:0
 #   3.1.2           14:0:0
-#   3.1.2           14:0:0
-#   3.1.2           15:0:0
+#   3.1.3           15:0:0
+#   3.1.4           16:0:0
+#   3.1.5           16:0:0
+#   3.1.6           16:0:0
 SUBDIRS = acl adouble bstring compat cnid dsi iniparser talloc util \
 	unicode vfs $(am__append_1)
 lib_LTLIBRARIES = libatalk.la
@@ -547,7 +549,10 @@ EXTRA_DIST = \
 	libatalk-3.1.0.abi \
 	libatalk-3.1.1.abi \
 	libatalk-3.1.2.abi \
-	libatalk-3.1.3.abi
+	libatalk-3.1.3.abi \
+	libatalk-3.1.4.abi \
+	libatalk-3.1.6.abi \
+	libatalk-3.1.5.abi
 
 all: all-recursive
 
