--- a/Makefile.in
+++ b/Makefile.in
@@ -102,6 +102,11 @@ am__aclocal_m4_deps = $(top_srcdir)/macros/afs-check.m4 \
 	$(top_srcdir)/macros/iconv.m4 \
 	$(top_srcdir)/macros/largefile-check.m4 \
 	$(top_srcdir)/macros/libgcrypt.m4 \
+	$(top_srcdir)/macros/libtool.m4 \
+	$(top_srcdir)/macros/ltoptions.m4 \
+	$(top_srcdir)/macros/ltsugar.m4 \
+	$(top_srcdir)/macros/ltversion.m4 \
+	$(top_srcdir)/macros/lt~obsolete.m4 \
 	$(top_srcdir)/macros/netatalk.m4 \
 	$(top_srcdir)/macros/pam-check.m4 \
 	$(top_srcdir)/macros/perl-check.m4 \
@@ -181,8 +186,8 @@ CSCOPE = cscope
 DIST_SUBDIRS = include libatalk bin config etc contrib distrib doc man \
 	macros test libevent
 am__DIST_COMMON = $(srcdir)/Makefile.in $(srcdir)/config.h.in AUTHORS \
-	COPYING NEWS compile config.guess config.sub install-sh \
-	ltmain.sh missing
+	COPYING NEWS compile config.guess config.sub depcomp \
+	install-sh ltmain.sh missing ylwrap
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
 distdir = $(PACKAGE)-$(VERSION)
 top_distdir = $(distdir)
