--- a/etc/netatalk/Makefile.in
+++ b/etc/netatalk/Makefile.in
@@ -114,6 +114,11 @@ am__aclocal_m4_deps = $(top_srcdir)/macros/afs-check.m4 \
 	$(top_srcdir)/macros/iconv.m4 \
 	$(top_srcdir)/macros/largefile-check.m4 \
 	$(top_srcdir)/macros/libgcrypt.m4 \
+	$(top_srcdir)/macros/libtool.m4 \
+	$(top_srcdir)/macros/ltoptions.m4 \
+	$(top_srcdir)/macros/ltsugar.m4 \
+	$(top_srcdir)/macros/ltversion.m4 \
+	$(top_srcdir)/macros/lt~obsolete.m4 \
 	$(top_srcdir)/macros/netatalk.m4 \
 	$(top_srcdir)/macros/pam-check.m4 \
 	$(top_srcdir)/macros/perl-check.m4 \
