--- a/debian/control
+++ b/debian/control
@@ -5,8 +5,8 @@ Maintainer: Debian Netatalk Packaging <pkg-netatalk-devel@lists.alioth.debian.or
 Uploaders: Jonas Smedegaard <dr@jones.dk>
 Build-Depends: cdbs (>= 0.4.106~),
  autotools-dev,
- devscripts,
- debhelper (>= 9~),
+ licensecheck,
+ debhelper,
  dh-buildinfo,
  libdb-dev,
  libwrap0-dev,
@@ -33,7 +33,7 @@ Section: net
 Architecture: any
 Depends: ${shlibs:Depends}, ${perl:Depends}, ${misc:Depends}, ${cdbs:Depends},
    python,
-   libatalk17
+   libatalk18
 Recommends: ${cdbs:Recommends}
 Suggests: ${cdbs:Suggests}
 Description: AppleTalk user binaries
@@ -45,7 +45,7 @@ Description: AppleTalk user binaries
  This package contains all daemon and utility programs as well as Netatalk's
  static libraries.
 
-Package: libatalk17
+Package: libatalk18
 Section: libs
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
@@ -64,7 +64,7 @@ Package: libatalk-dev
 Section: libdevel
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends},
-   libatalk17 (= ${binary:Version})
+   libatalk18 (= ${binary:Version})
 Replaces: netatalk (<< 3.0.3-1)
 Conflicts: netatalk (<< 3.0.3-1)
 Description: AppleTalk library used by Netatalk (header files)
