--- a/debian/control.in
+++ b/debian/control.in
@@ -5,8 +5,8 @@ Maintainer: Debian Netatalk Packaging <pkg-netatalk-devel@lists.alioth.debian.or
 Uploaders: Jonas Smedegaard <dr@jones.dk>
 Build-Depends: @cdbs@
 Build-Conflicts: libavahi-compat-libdnssd-dev
-Vcs-Git: git://git.debian.org/git/collab-maint/netatalk
-Vcs-Browser: http://git.debian.org/?p=collab-maint/netatalk.git
+Vcs-Git: https://anonscm.debian.org/git/collab-maint/netatalk.git
+Vcs-Browser: https://anonscm.debian.org/gitweb/?p=collab-maint/netatalk.git
 Standards-Version: 3.9.5
 Homepage: http://netatalk.sourceforge.net/
 
