New upstream version 3.1.11

--- a/etc/uams/Makefile.in
+++ b/etc/uams/Makefile.in
@@ -20,6 +20,7 @@
 # conditionally build some modules
 #
 
+
 VPATH = @srcdir@
 am__is_gnu_make = { \
   if test -z '$(MAKELEVEL)'; then \
@@ -132,7 +133,8 @@ am__aclocal_m4_deps = $(top_srcdir)/macros/afs-check.m4 \
 	$(top_srcdir)/configure.ac
 am__configure_deps = $(am__aclocal_m4_deps) $(CONFIGURE_DEPENDENCIES) \
 	$(ACLOCAL_M4)
-DIST_COMMON = $(srcdir)/Makefile.am $(am__DIST_COMMON)
+DIST_COMMON = $(srcdir)/Makefile.am $(noinst_HEADERS) \
+	$(am__DIST_COMMON)
 mkinstalldirs = $(install_sh) -d
 CONFIG_HEADER = $(top_builddir)/config.h
 CONFIG_CLEAN_FILES =
@@ -300,6 +302,7 @@ am__can_run_installinfo = \
     n|no|NO) false;; \
     *) (install-info --version) >/dev/null 2>&1;; \
   esac
+HEADERS = $(noinst_HEADERS)
 am__tagged_files = $(HEADERS) $(SOURCES) $(TAGS_FILES) $(LISP)
 # Read a list of newline-separated strings from the standard input,
 # and print each of them once, without duplicates.  Input order is
@@ -570,6 +573,7 @@ uams_dhx_pam_la_SOURCES = uams_dhx_pam.c
 uams_dhx2_passwd_la_SOURCES = uams_dhx2_passwd.c
 uams_dhx2_pam_la_SOURCES = uams_dhx2_pam.c
 uams_gss_la_SOURCES = uams_gss.c
+noinst_HEADERS = openssl_compat.h
 
 #
 # flags
@@ -862,7 +866,7 @@ distdir: $(DISTFILES)
 	done
 check-am: all-am
 check: check-am
-all-am: Makefile $(LTLIBRARIES)
+all-am: Makefile $(LTLIBRARIES) $(HEADERS)
 installdirs:
 	for dir in "$(DESTDIR)$(uamsdir)"; do \
 	  test -z "$$dir" || $(MKDIR_P) "$$dir"; \
